[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/AGENCYB.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://menu.gd" type="Script" id=2]
[ext_resource path="res://objects/save_load.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Jogar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.6365
margin_top = -136.601
margin_right = 76.3635
margin_bottom = -68.6006
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Jogar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -36.3863
margin_right = 52.5
margin_bottom = 24.6137
custom_fonts/font = SubResource( 1 )
text = "Jogar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sair" type="Button" parent="."]
margin_left = 570.189
margin_top = 408.959
margin_right = 711.189
margin_bottom = 478.959
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -30.5
margin_right = 36.0
margin_bottom = 30.5
custom_fonts/font = SubResource( 2 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="load" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_top = -410.0
margin_right = 76.0
margin_bottom = -340.0
custom_fonts/font = SubResource( 3 )
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_load" parent="load" instance=ExtResource( 3 )]
margin_left = -358.909
margin_top = -87.2043
margin_right = -358.909
margin_bottom = -87.2043

[connection signal="pressed" from="Jogar" to="." method="_on_Jogar_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
